crates/lash/tests/ui/core_delete_session_requires_scope.stderr
error[E0061]: this method takes 2 arguments but 1 argument was supplied
 --> tests/ui/core_delete_session_requires_scope.rs:2:18
  |
2 |     let _ = core.delete_session("session-id").await;
  |                  ^^^^^^^^^^^^^^-------------- argument #2 of type `ScopedEffectController<'_>` is missing
  |
note: method defined here
 --> src/core.rs
  |
  |     pub async fn delete_session(
  |                  ^^^^^^^^^^^^^^
help: provide the argument
  |
2 |     let _ = core.delete_session("session-id", /* ScopedEffectController<'_> */).await;
  |                                             ++++++++++++++++++++++++++++++++++
