crates/lash/tests/ui/core_delete_session_requires_scope.rs
async fn check(core: lash::LashCore) {
    let _ = core.delete_session("session-id").await;
}

fn main() {}
